--- a/index.html
+++ b/index.html
@@ -2,9 +2,17 @@
 <html>
 <head>
     <title>My first website</title>
-</head>
+
 <body>
-    <h1>Hello World!</h1>
-    <p>Welcome to my first website.</p>
-</body>    
+    <h1>RainyDays</h1>
+    <nav>
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="explore.html">Explore</a></li>
+            <li><a href="mens.html">Mens</a></li>
+            <li><a href="womens.html">Womens</a></li>
+        </ul>
+    </nav>/>
+</body>  
+</head>  
 </html>
