added buttons and link to js file
added buttons for explore, mens and womens, as well as <script> input

--- a/explore.html
+++ b/explore.html
@@ -3,5 +3,13 @@
     <head>
         <title>Explore</title>
     </head>
-    <body>Brand info and Contact info</body>
+    <body>Brand info and Contact info
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="mens.html">Mens</a></li>
+                <li><a href="womens.html">Womens</a></li>
+            </ul>
+        </nav>
+    </body>
 </html>
