--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>My first website</title>
-
+    <title>RainyDays</title>
+    <script src="C:\Users\larsr\OneDrive\Skrivebord\Front End\GitHub\RainyDays\js\rainydais.js"></script>
+</head> 
 <body>
     <h1>RainyDays</h1>
     <nav>
@@ -12,7 +13,10 @@
             <li><a href="mens.html">Mens</a></li>
             <li><a href="womens.html">Womens</a></li>
         </ul>
-    </nav>/>
+    </nav>
+    <button onclick="runCode()">Explore</button>
+    <button onclick="runCode()">Mens</button>
+    <button onclick="runCode()">Womens</button>
 </body>  
-</head>  
+ 
 </html>
