linked mens and womens page to product page

--- a/mens.html
+++ b/mens.html
@@ -4,6 +4,11 @@
         <title>Mens Jackets</title>
     </head>
     <body>
-        <h1></h1>
+        <h1>mens</h1>
+        <nav>
+            <ul>
+                <li><a href="mensproduct.html">Jacket1</a></li>
+            </ul>
+        </nav>
     </body>
 </html>
