--- a/womens.html
+++ b/womens.html
@@ -4,6 +4,11 @@
         <title>Womens Jackets</title>
     </head>
     <body>
-        <h1></h1>
+        <h2>Womens</h2>
+        <nav>
+            <ul>
+                <li><a href="womensproduct.html">Jacket1</a></li>
+            </ul>
+        </nav>
     </body>
 </html>
