added link from idex to checkout

--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
             <li><a href="explore.html">Explore</a></li>
             <li><a href="mens.html">Mens</a></li>
             <li><a href="womens.html">Womens</a></li>
+            <li><a href="checkout.html">Checkout</a></li>
         </ul>
     </nav>
     <button onclick="runCode()">Explore</button>
     <button onclick="runCode()">Mens</button>
     <button onclick="runCode()">Womens</button>
 </body>  
- 
 </html>
