added button for jacket 2 and 3 in mens and womens product pagee

--- a/womensproduct.html
+++ b/womensproduct.html
@@ -3,5 +3,7 @@
     <head>
         <title>Womens</title>
         <button onclick="runCode()">Jacket1</button>
+        <button onclick="runCode()">Jacket2</button>
+        <button onclick="runCode()">Jacket3</button>
     </head>
 </html>
