--- a/mensproduct.html
+++ b/mensproduct.html
@@ -1,4 +1,9 @@
 <!DOCTYPE html>
 <html>
-    
+    <head>
+        <title>Mens</title>
+        <button onclick="runCode()">Jacket1</button>
+        <button onclick="runCode()">Jacket2</button>
+        <button onclick="runCode()">Jacket3</button>
+    </head>
 </html>
