--- a/explore.html
+++ b/explore.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
-    <head>
+    <header>
         <title>Explore</title>
-    </head>
+    </header>
     <body>Brand info and Contact info
         <nav>
             <ul>
