--- a/mens.html
+++ b/mens.html
@@ -10,5 +10,8 @@
                 <li><a href="mensproduct.html">Jacket1</a></li>
             </ul>
         </nav>
+        <button onclick="runCode()">Jacket1</button>
+        <button onclick="runCode()">Jacket2</button>
+        <button onclick="runCode()">Jacket3</button>
     </body>
 </html>
