--- a/mensproduct.html
+++ b/mensproduct.html
@@ -1,9 +1,7 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>Mens</title>
-        <button onclick="runCode()">Jacket1</button>
-        <button onclick="runCode()">Jacket2</button>
-        <button onclick="runCode()">Jacket3</button>
-    </head>
+    <header>
+        <title>Mens Jacket 1</title>
+       
+    </header>
 </html>
