--- a/womens.html
+++ b/womens.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
-    <head>
+    <header>
         <title>Womens Jackets</title>
-    </head>
+    </header>
     <body>
         <h2>Womens</h2>
         <nav>
@@ -10,5 +10,8 @@
                 <li><a href="womensproduct.html">Jacket1</a></li>
             </ul>
         </nav>
+        <button onclick="runCode()">Jacket1</button>
+        <button onclick="runCode()">Jacket2</button>
+        <button onclick="runCode()">Jacket3</button>
     </body>
 </html>
