--- a/womensproduct.html
+++ b/womensproduct.html
@@ -1,9 +1,6 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Womens</title>
-        <button onclick="runCode()">Jacket1</button>
-        <button onclick="runCode()">Jacket2</button>
-        <button onclick="runCode()">Jacket3</button>
-    </head>
+        <title>Womens Jacket 1</title>
+        </head>
 </html>
