format wit prettier plugin

--- a/mensproduct.html
+++ b/mensproduct.html
@@ -1,7 +1,17 @@
 <!DOCTYPE html>
 <html>
-    <header>
-        <title>Mens Jacket 1</title>
-       
-    </header>
+  <header>
+    <title>Mens Jacket 1</title>
+  </header>
+  <body>
+    <nav>
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="explore.html">Explore</a></li>
+        <li><a href="mens.html">Mens</a></li>
+        <li><a href="womens.html">Womens</a></li>
+        <li><a href="checkout.html">Checkout</a></li>
+      </ul>
+    </nav>
+  </body>
 </html>
