--- a/explore.html
+++ b/explore.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
 <html>
-    <header>
-        <title>Explore</title>
-    </header>
-    <body>Brand info and Contact info
-        <nav>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="mens.html">Mens</a></li>
-                <li><a href="womens.html">Womens</a></li>
-            </ul>
-        </nav>
-    </body>
+  <header>
+    <title>Explore</title>
+  </header>
+  <body>
+    Brand info and Contact info
+    <nav>
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="mens.html">Mens</a></li>
+        <li><a href="womens.html">Womens</a></li>
+      </ul>
+    </nav>
+  </body>
 </html>
