--- a/womensproduct.html
+++ b/womensproduct.html
@@ -1,6 +1,17 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>Womens Jacket 1</title>
-        </head>
+  <head>
+    <title>Womens Jacket 1</title>
+  </head>
+  <body>
+    <nav>
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="explore.html">Explore</a></li>
+        <li><a href="mens.html">Mens</a></li>
+        <li><a href="womens.html">Womens</a></li>
+        <li><a href="checkout.html">Checkout</a></li>
+      </ul>
+    </nav>
+  </body>
 </html>
