added button to men sand womens jacket
add to cart button

--- a/explore.html
+++ b/explore.html
@@ -4,7 +4,7 @@
     <title>Explore</title>
   </header>
   <body>
-    Brand info and Contact info
+    <p>Brand Info and Contact Info</p>
     <nav>
       <ul>
         <li><a href="index.html">Home</a></li>
