--- a/mensproduct.html
+++ b/mensproduct.html
@@ -2,6 +2,7 @@
 <html>
   <header>
     <title>Mens Jacket 1</title>
+    <h2>Jacket1</h2>
   </header>
   <body>
     <nav>
@@ -13,5 +14,7 @@
         <li><a href="checkout.html">Checkout</a></li>
       </ul>
     </nav>
+    
+    <button onclick="runCode()">Add to cart</button>
   </body>
 </html>
