--- a/womensproduct.html
+++ b/womensproduct.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>Womens Jacket 1</title>
+    <h2>Jacket1</h2>
   </head>
   <body>
     <nav>
@@ -13,5 +14,6 @@
         <li><a href="checkout.html">Checkout</a></li>
       </ul>
     </nav>
+    <button onclick="runCode()">Add to cart</button>
   </body>
 </html>
