--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>RainyDays</title>
+    <meta name="viewporrt" content="width=device-width, initial-scale=1.0">
     <script src="C:\Users\larsr\OneDrive\Skrivebord\Front End\GitHub\RainyDays\js\rainydais.js"></script>
   </head>
   <body>
