added links to explore and checkout

--- a/womensproduct.html
+++ b/womensproduct.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta name="viewporrt" content="width=device-width, initial-scale=1.0" />
     <title>Womens Jacket 1</title>
-    <h2>Jacket1</h2>
   </head>
+  <header><h2>Jacket1</h2></header>
   <body>
     <nav>
       <ul>
