--- a/checkout.html
+++ b/checkout.html
@@ -2,6 +2,17 @@
 <html>
   <head>
     <title>Checkout</title>
-    <button onclick="runCode()">Checkout</button>
+    <h2>Checkout</h2>
   </head>
+  <body>
+    <nav>
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="explore.html">Explore</a></li>
+        <li><a href="mens.html">Mens</a></li>
+        <li><a href="womens.html">Womens</a></li>
+      </ul>
+    </nav>
+    <button onclick="runCode()">Checkout</button>
+  </body>
 </html>
