fixed order in header and added JS

--- a/mensproduct.html
+++ b/mensproduct.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html>
-  <header>
+  <head>
     <title>Mens Jacket 1</title>
-    <h2>Jacket1</h2>
-  </header>
+    <meta name="viewporrt" content="width=device-width, initial-scale=1.0" />
+    <script src="C:\Users\larsr\OneDrive\Skrivebord\Front End\GitHub\RainyDays\js\rainydais.js"></script>
+  </head>
+  <header><h2>Jacket1</h2></header>
   <body>
     <nav>
       <ul>
