--- a/womensproduct.html
+++ b/womensproduct.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta name="viewporrt" content="width=device-width, initial-scale=1.0" />
     <title>Womens Jacket 1</title>
+    <meta name="viewporrt" content="width=device-width, initial-scale=1.0" />
+    <script src="C:\Users\larsr\OneDrive\Skrivebord\Front End\GitHub\RainyDays\js\rainydais.js"></script>
   </head>
   <header><h2>Jacket1</h2></header>
   <body>
