--- a/explore.html
+++ b/explore.html
@@ -1,10 +1,15 @@
 <!DOCTYPE html>
 <html>
+    <head>
+        <title>Explore</title>
+        <meta name="viewporrt" content="width=device-width, initial-scale=1.0" />
+    </head>
   <header>
-    <title>Explore</title>
+    <h2>Explore</h2>
   </header>
   <body>
     <p>Brand Info and Contact Info</p>
+    <img src="images/elias-arias--fMc5tAEPcs-unsplashMountains.jpg" height="100%" width="100%">
     <nav>
       <ul>
         <li><a href="index.html">Home</a></li>
