--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
   <head>
     <title>RainyDays</title>
     <meta name="viewporrt" content="width=device-width, initial-scale=1.0">
-    <script src="C:\Users\larsr\OneDrive\Skrivebord\Front End\GitHub\RainyDays\js\rainydais.js"></script>
   </head>
   <body>
     <h2>RainyDays</h2>
+    <img src="images/madara-parma-Lfw8ZpYaOhg-unsplash.jpg" height="100%" width="100%">
     <nav>
       <ul>
         <li><a href="index.html">Home</a></li>
