--- a/mens.html
+++ b/mens.html
@@ -5,13 +5,17 @@
   </head>
   <body>
     <h2>mens</h2>
+    <img src="images/thom-holmes-YOQcfY9nsGU-unsplash.jpg" height="100%" width="100%">
     <nav>
       <ul>
         <li><a href="mensproduct.html">Jacket1</a></li>
       </ul>
     </nav>
     <button onclick="runCode()">Jacket1</button>
+    <img src="images/pexels-matt-hardy-2755165.jpg" height="150px" width="120px">
     <button onclick="runCode()">Jacket2</button>
+    <img src="images/pexels-matt-hardy-2755165.jpg" height="150px" width="120px">
     <button onclick="runCode()">Jacket3</button>
+    <img src="images/pexels-matt-hardy-2755165.jpg" height="150px" width="120px">
   </body>
 </html>
