--- a/mensproduct.html
+++ b/mensproduct.html
@@ -7,6 +7,7 @@
   </head>
   <header><h2>Jacket1</h2></header>
   <body>
+   
     <nav>
       <ul>
         <li><a href="index.html">Home</a></li>
@@ -16,6 +17,7 @@
         <li><a href="checkout.html">Checkout</a></li>
       </ul>
     </nav>
+    <img src="images/pexels-matt-hardy-2755165.jpg" height="100%" width="100%">
     <button onclick="runCode()">Add to cart</button>
   </body>
 </html>
