--- a/womens.html
+++ b/womens.html
@@ -5,13 +5,40 @@
   </header>
   <body>
     <h2>Womens</h2>
+    <img
+      src="images/blake-cheek-dw96lVwMXJg-unsplash.jpg"
+      height="100%"
+      width="100%"
+    />
     <nav>
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="explore.html">Explore</a></li>
+        <li><a href="mens.html">Mens</a></li>
+
+        <li><a href="checkout.html">Checkout</a></li>
+      </ul>
       <ul>
         <li><a href="womensproduct.html">Jacket1</a></li>
       </ul>
     </nav>
     <button onclick="runCode()">Jacket1</button>
+    <img
+      src="images/pexels-matt-hardy-2755165.jpg"
+      height="150px"
+      width="120px"
+    />
     <button onclick="runCode()">Jacket2</button>
+    <img
+      src="images/pexels-matt-hardy-2755165.jpg"
+      height="150px"
+      width="120px"
+    />
     <button onclick="runCode()">Jacket3</button>
+    <img
+      src="images/pexels-matt-hardy-2755165.jpg"
+      height="150px"
+      width="120px"
+    />
   </body>
 </html>
