--- a/womensproduct.html
+++ b/womensproduct.html
@@ -16,6 +16,7 @@
         <li><a href="checkout.html">Checkout</a></li>
       </ul>
     </nav>
+    <img src="images/pexels-matt-hardy-2755165.jpg" height="100%" width="100%">
     <button onclick="runCode()">Add to cart</button>
   </body>
 </html>
