--- a/index.html
+++ b/index.html
@@ -2,11 +2,15 @@
 <html>
   <head>
     <title>RainyDays</title>
-    <meta name="viewporrt" content="width=device-width, initial-scale=1.0">
+    <meta name="viewporrt" content="width=device-width, initial-scale=1.0" />
   </head>
   <body>
     <h2>RainyDays</h2>
-    <img src="images/madara-parma-Lfw8ZpYaOhg-unsplash.jpg" height="100%" width="100%">
+    <img
+      src="images/madara-parma-Lfw8ZpYaOhg-unsplash.jpg"
+      height="100%"
+      width="100%"
+    />
     <nav>
       <ul>
         <li><a href="index.html">Home</a></li>
