added link to stylesheet and meta viewport

--- a/checkout.html
+++ b/checkout.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>Checkout</title>
+    <meta name="viewporrt" content="width=device-width, initial-scale=1.0" />
     <h2>Checkout</h2>
   </head>
   <body>
@@ -11,6 +12,7 @@
         <li><a href="explore.html">Explore</a></li>
         <li><a href="mens.html">Mens</a></li>
         <li><a href="womens.html">Womens</a></li>
+        <li><a href="checkoutcomplete.html">Checkout Complete</a></li>
       </ul>
     </nav>
     <button onclick="runCode()">Checkout</button>
