--- a/checkoutcomplete.html
+++ b/checkoutcomplete.html
@@ -1,17 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>RainyDays</title>
+    <title>CheckoutComplete</title>
     <meta name="viewporrt" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="rainydays.css">
+    <h2>Checkout Complete</h2>
   </head>
   <body>
-    <h2>RainyDays</h2>
-    <img
-      src="images/madara-parma-Lfw8ZpYaOhg-unsplash.jpg"
-      height="100%"
-      width="100%"
-    />
     <nav>
       <ul>
         <li><a href="index.html">Home</a></li>
@@ -21,8 +15,7 @@
         <li><a href="checkout.html">Checkout</a></li>
       </ul>
     </nav>
-    <button onclick="runCode()">Explore</button>
-    <button onclick="runCode()">Mens</button>
-    <button onclick="runCode()">Womens</button>
+    <button onclick="runCode()">Checkout Complete
+    </button>
   </body>
 </html>
