--- a/mensproduct.html
+++ b/mensproduct.html
@@ -3,11 +3,10 @@
   <head>
     <title>Mens Jacket 1</title>
     <meta name="viewporrt" content="width=device-width, initial-scale=1.0" />
-    <script src="C:\Users\larsr\OneDrive\Skrivebord\Front End\GitHub\RainyDays\js\rainydais.js"></script>
+    <script src="rainydais.js"></script>
   </head>
   <header><h2>Jacket1</h2></header>
   <body>
-   
     <nav>
       <ul>
         <li><a href="index.html">Home</a></li>
@@ -17,7 +16,11 @@
         <li><a href="checkout.html">Checkout</a></li>
       </ul>
     </nav>
-    <img src="images/pexels-matt-hardy-2755165.jpg" height="100%" width="100%">
+    <img
+      src="images/pexels-matt-hardy-2755165.jpg"
+      height="100%"
+      width="100%"
+    />
     <button onclick="runCode()">Add to cart</button>
   </body>
 </html>
