--- a/womens.html
+++ b/womens.html
@@ -2,6 +2,7 @@
 <html>
   <header>
     <title>Womens Jackets</title>
+    <meta name="viewporrt" content="width=device-width, initial-scale=1.0" />
   </header>
   <body>
     <h2>Womens</h2>
@@ -15,7 +16,6 @@
         <li><a href="index.html">Home</a></li>
         <li><a href="explore.html">Explore</a></li>
         <li><a href="mens.html">Mens</a></li>
-
         <li><a href="checkout.html">Checkout</a></li>
       </ul>
       <ul>
