changed name on css file and added styling to idex page

--- a/index.html
+++ b/index.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link rel="stylesheet" href="styles/index.css" />
     <title>RainyDays</title>
     <meta name="viewporrt" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="rainydays.css">
   </head>
   <body>
     <h2>RainyDays</h2>
     <img
+      src="images/RainyDays_Logo.png"
+      height="200"
+      width="400"
       src="images/madara-parma-Lfw8ZpYaOhg-unsplash.jpg"
       height="100%"
       width="100%"
