--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
     <h2>RainyDays</h2>
     <img
-      src="images/RainyDays_Logo.png"
+      #src="images/RainyDays_Logo.png"
       height="200"
       width="400"
       src="images/madara-parma-Lfw8ZpYaOhg-unsplash.jpg"
