added colour and sizing in css

--- a/index.html
+++ b/index.html
@@ -4,14 +4,18 @@
     <link rel="stylesheet" href="styles/index.css" />
     <title>RainyDays</title>
     <meta name="viewporrt" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Rain Jackets" />
+    <meta name="keywords" content="Outdoor apparel, womens rain Jackets, mens rain Jackets" />
   </head>
   <body>
     <h2>RainyDays</h2>
     <img
       #src="images/RainyDays_Logo.png"
+      alt="RainyDays Logo"
       height="200"
       width="400"
       src="images/madara-parma-Lfw8ZpYaOhg-unsplash.jpg"
+      alt="Man in yellow jacket walking across a moor"
       height="100%"
       width="100%"
     />
