border-radius sett to 50px

--- a/mens.html
+++ b/mens.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link rel="stylesheet" href="styles/mens.css" />
     <title>Mens Jackets</title>
     <meta name="viewporrt" content="width=device-width, initial-scale=1.0" />
   </head>
