--- a/explore.html
+++ b/explore.html
@@ -1,15 +1,24 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>Explore</title>
-        <meta name="viewporrt" content="width=device-width, initial-scale=1.0" />
-    </head>
+  <head>
+    <link rel="stylesheet" href="styles/explore.css" />
+    <title>Explore</title>
+    <meta name="viewporrt" content="width=device-width, initial-scale=1.0" />
+  </head>
   <header>
     <h2>Explore</h2>
   </header>
   <body>
     <p>Brand Info and Contact Info</p>
-    <img src="images/elias-arias--fMc5tAEPcs-unsplashMountains.jpg" height="100%" width="100%">
+    <button onclick="index.html">Home</button>
+    <button onclick="mens.html">Mens</button>
+    <button onclick="womens.html">Womens</button>
+    <button onclick="explore.html">Explore</button>
+    <img
+      src="images/elias-arias--fMc5tAEPcs-unsplashMountains.jpg"
+      height="100%"
+      width="100%"
+    />
     <nav>
       <ul>
         <li><a href="index.html">Home</a></li>
