--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       height="200"
       width="400"
       src="images/madara-parma-Lfw8ZpYaOhg-unsplash.jpg"
-      alt="Man in yellow jacket walking across a moor"
+      alt="Man in yellow jacket, walking across a moor"
       height="100%"
       width="100%"
     />
