--- a/mensproduct.html
+++ b/mensproduct.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta charset="UTF-8">
     <title>Mens Jacket 1</title>
     <meta name="viewporrt" content="width=device-width, initial-scale=1.0" />
     <script src="rainydais.js"></script>
