--- a/index.html
+++ b/index.html
@@ -6,19 +6,20 @@
     <meta name="viewporrt" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Rain Jackets" />
     <meta name="keywords" content="Outdoor apparel, womens rain Jackets, mens rain Jackets" />
+    <style>
+      html{
+        background: src="images/madara-parma-Lfw8ZpYaOhg-unsplash.jpg"
+      alt="Man in yellow jacket, walking across a moor";
+      background-size: cover;
+      }
+    </style>
   </head>
-  <body>
+    <body>
     <h2>RainyDays</h2>
-    <img
-      #src="images/RainyDays_Logo.png"
-      alt="RainyDays Logo"
-      height="200"
-      width="400"
-      src="images/madara-parma-Lfw8ZpYaOhg-unsplash.jpg"
-      alt="Man in yellow jacket, walking across a moor"
-      height="100%"
-      width="100%"
-    />
+    <button onclick="runCode()">Explore</button>
+    <button onclick="runCode()">Mens</button>
+    <button onclick="runCode()">Womens</button>
+    
     <nav>
       <ul>
         <li><a href="index.html">Home</a></li>
@@ -28,8 +29,6 @@
         <li><a href="checkout.html">Checkout</a></li>
       </ul>
     </nav>
-    <button onclick="runCode()">Explore</button>
-    <button onclick="runCode()">Mens</button>
-    <button onclick="runCode()">Womens</button>
+    
   </body>
 </html>
