--- a/explore.html
+++ b/explore.html
@@ -6,7 +6,7 @@
     <meta name="viewporrt" content="width=device-width, initial-scale=1.0" />
   </head>
   <header>
-    <h2>Explore</h2>
+    <h1>explore</h1>
   </header>
   <body>
     <p>Brand Info and Contact Info</p>
