--- a/explore.html
+++ b/explore.html
@@ -6,8 +6,13 @@
     <meta name="viewporrt" content="width=device-width, initial-scale=1.0" />
   </head>
   <header>
-    <h1>explore</h1>
+    <div class="logo">
+      <a href="index.html">
+        <img src="images/RainyDays-Logo-Home-Page.png" alt="Logo" width="80" height="50">
+      </a>
+   
   </header>
+  <h1>explore</h1>
   <body>
     <p>Brand Info and Contact Info</p>
     <button onclick="index.html">Home</button>
