--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
         <img src="images/RainyDays-Logo-Home-Page.png" alt="Logo" width="80" height="50">
       </a>
     </div>
-    <button onclick href="explore.html">Explore</button>
+    <button onclick >Explore
+      <a href="explore.html"></a>
+    </button>
     <button onclick href="mens.html">Mens</button>
     <button onclick href="womens.html">Womens</button>
     </header>
