made buttons link to pages
href tag to buttons
and styled buttons on mens page

--- a/explore.html
+++ b/explore.html
@@ -10,15 +10,19 @@
       <a href="index.html">
         <img src="images/RainyDays-Logo-Home-Page.png" alt="Logo" width="80" height="50">
       </a>
-   
-  </header>
+    </div>
+    <a href="explore.html"><button onclick >explore
+    </button></a>
+    <a href="mens.html"><button onclick >mens
+    </button></a>
+    <a href="womens.html"><button onclick >womens
+    </button></a>
+    
+    </header>
   <h1>explore</h1>
   <body>
     <p>Brand Info and Contact Info</p>
-    <button onclick="index.html">Home</button>
-    <button onclick="mens.html">Mens</button>
-    <button onclick="womens.html">Womens</button>
-    <button onclick="explore.html">Explore</button>
+    
     <img
       src="images/elias-arias--fMc5tAEPcs-unsplashMountains.jpg"
       height="100%"
