--- a/mens.html
+++ b/mens.html
@@ -6,7 +6,21 @@
     <meta name="viewporrt" content="width=device-width, initial-scale=1.0" />
   </head>
   <body>
-    <h2>mens</h2>
+    <header>
+      <div class="logo">
+        <a href="index.html">
+          <img src="images/RainyDays-Logo-Home-Page.png" alt="Logo" width="80" height="50">
+        </a>
+      </div>
+      <a href="explore.html"><button onclick >explore
+      </button></a>
+      <a href="mens.html"><button onclick >mens
+      </button></a>
+      <a href="womens.html"><button onclick >womens
+      </button></a>
+      
+      </header>
+    <h1>mens</h1>
     <img
       src="images/thom-holmes-YOQcfY9nsGU-unsplash.jpg"
       height="100%"
