--- a/womens.html
+++ b/womens.html
@@ -1,11 +1,26 @@
 <!DOCTYPE html>
 <html>
   <header>
+    <link rel="stylesheet" href="styles/womens.css" />
     <title>Womens Jackets</title>
     <meta name="viewporrt" content="width=device-width, initial-scale=1.0" />
   </header>
   <body>
-    <h2>Womens</h2>
+    <header>
+      <div class="logo">
+        <a href="index.html">
+          <img src="images/RainyDays-Logo-Home-Page.png" alt="Logo" width="80" height="50">
+        </a>
+      </div>
+      <a href="explore.html"><button onclick >explore
+      </button></a>
+      <a href="mens.html"><button onclick >mens
+      </button></a>
+      <a href="womens.html"><button onclick >womens
+      </button></a>
+      
+      </header>
+    <h1>Womens</h1>
     <img
       src="images/blake-cheek-dw96lVwMXJg-unsplash.jpg"
       height="100%"
