added css to checkout
styled the mens product and the checkout page

--- a/mens.html
+++ b/mens.html
@@ -26,24 +26,24 @@
       height="100%"
       width="100%"
     />
-    <nav>
-      <ul>
-        <li><a href="mensproduct.html">Jacket1</a></li>
-      </ul>
-    </nav>
-    <button onclick="runCode()">Jacket1</button>
+    
+    <a href="mensproduct.html"><button onclick >Jacket1
+    </button></a>
+    
     <img
       src="images/pexels-matt-hardy-2755165.jpg"
       height="150px"
       width="120px"
     />
-    <button onclick="runCode()">Jacket2</button>
+    <a href="mensproduct.html"><button onclick >Jacket2
+    </button></a>
     <img
       src="images/pexels-matt-hardy-2755165.jpg"
       height="150px"
       width="120px"
     />
-    <button onclick="runCode()">Jacket3</button>
+    <a href="mensproduct.html"><button onclick >Jacket3
+    </button></a>
     <img
       src="images/pexels-matt-hardy-2755165.jpg"
       height="150px"
