--- a/womens.html
+++ b/womens.html
@@ -27,29 +27,28 @@
       width="100%"
     />
     <nav>
-      <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="explore.html">Explore</a></li>
-        <li><a href="mens.html">Mens</a></li>
-        <li><a href="checkout.html">Checkout</a></li>
-      </ul>
+     
       <ul>
         <li><a href="womensproduct.html">Jacket1</a></li>
       </ul>
     </nav>
-    <button onclick="runCode()">Jacket1</button>
+    <a href="mensproduct.html"><button onclick >Jacket1
+    </button></a>
+    
     <img
       src="images/pexels-matt-hardy-2755165.jpg"
       height="150px"
       width="120px"
     />
-    <button onclick="runCode()">Jacket2</button>
+    <a href="mensproduct.html"><button onclick >Jacket2
+    </button></a>
     <img
       src="images/pexels-matt-hardy-2755165.jpg"
       height="150px"
       width="120px"
     />
-    <button onclick="runCode()">Jacket3</button>
+    <a href="mensproduct.html"><button onclick >Jacket3
+    </button></a>
     <img
       src="images/pexels-matt-hardy-2755165.jpg"
       height="150px"
