slogan and meta
added slogan png to footer in mensproduct.html
added meta keywords and meta description in womens.html

--- a/mensproduct.html
+++ b/mensproduct.html
@@ -33,5 +33,7 @@
     <a href="checkout.html"><button onclick >Add to cart</button></a>
     
   </body>
-  <footer>hello</footer>
+  <footer>
+    <img src="images/Rainydays_slogan1.png" alt="Brand slogan, Pushing the Comfort zone">
+  </footer>
 </html>
