--- a/womens.html
+++ b/womens.html
@@ -4,6 +4,9 @@
     <link rel="stylesheet" href="styles/womens.css" />
     <title>Womens Jackets</title>
     <meta name="viewporrt" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="womens rain jackets" />
+    <meta name="keywords" content="womens rain jackets and outdoor apparel"/>
+
   </header>
   <body>
     <header>
