all pages updatetd
img styled
meta names
search bar added to pages

--- a/mens.html
+++ b/mens.html
@@ -18,7 +18,7 @@
       </button></a>
       <a href="womens.html"><button onclick >womens
       </button></a>
-      
+      <div class="search"><input type="text" placeholder="Search.."> </div>
       </header>
     <h1>mens</h1>
     <img
