--- a/explore.html
+++ b/explore.html
@@ -17,7 +17,7 @@
     </button></a>
     <a href="womens.html"><button onclick >womens
     </button></a>
-    
+    <div class="search"><input type="text" placeholder="Search.."> </div>
     </header>
   <h1>explore</h1>
   <body>
@@ -28,12 +28,6 @@
       height="100%"
       width="100%"
     />
-    <nav>
-      <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="mens.html">Mens</a></li>
-        <li><a href="womens.html">Womens</a></li>
-      </ul>
-    </nav>
+    
   </body>
 </html>
