--- a/mensproduct.html
+++ b/mensproduct.html
@@ -21,7 +21,7 @@
       </button></a>
       <a href="womens.html"><button onclick >womens
       </button></a>
-      
+      <div class="search"><input type="text" placeholder="Search.."> </div>
       </header>
       <h1>jacket1</h1>
     
