--- a/explore.html
+++ b/explore.html
@@ -6,18 +6,23 @@
     <meta name="viewporrt" content="width=device-width, initial-scale=1.0" />
   </head>
   <header>
+    <nav role="navigation" aria-label="main menu"> 
     <div class="logo">
       <a href="index.html">
         <img src="images/RainyDays-Logo-Home-Page.png" alt="Logo" width="80" height="50">
       </a>
     </div>
-    <a href="explore.html"><button onclick >explore
-    </button></a>
-    <a href="mens.html"><button onclick >mens
-    </button></a>
-    <a href="womens.html"><button onclick >womens
-    </button></a>
-    <div class="search"><input type="text" placeholder="Search.."> </div>
+    
+    <ul class="navbar">
+    <li><a href="explore.html"><button onclick >explore
+    </button></a></li>
+    <li><a href="mens.html"><button onclick >mens
+    </button></a></li>
+    <li><a href="womens.html"><button onclick >womens
+    </button></a></li>
+    <li><div class="search"><input type="text" placeholder="Search.."> </div></li>
+  </ul>
+    </nav>
     </header>
   <h1>explore</h1>
   <body>
