--- a/explore.html
+++ b/explore.html
@@ -6,12 +6,12 @@
     <meta name="viewporrt" content="width=device-width, initial-scale=1.0" />
   </head>
   <header>
-    <nav role="navigation" aria-label="main menu"> 
+    <nav class="navigation" aria-label="main menu"> 
     <div class="logo">
       <a href="index.html">
         <img src="images/RainyDays-Logo-Home-Page.png" alt="Logo" width="80" height="50">
       </a>
-    </div>
+  
      
     <ul class="navbar">
     <li><a href="explore.html"><button onclick >explore
