cart html added

--- a/index.html
+++ b/index.html
@@ -2,16 +2,17 @@
 <html>
   <head>
     <link rel="stylesheet" href="styles/index.css" />
-    <title>RainyDays</title>
+    <meta charset="UTF-8">
     <meta name="viewporrt" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Rain Jackets" />
-    <meta
-      name="keywords"
-      content="Outdoor apparel, womens rain Jackets, mens rain Jackets"
-    />
+    <meta name="keywords"  content="Outdoor apparel, womens rain Jackets, mens rain Jackets" />
+
+    <title>RainyDays</title>
   </head>
   <body>
+
     <header>
+
       <div class="logo">
         <a href="index.html">
           <img
@@ -25,8 +26,18 @@
       <a href="explore.html"><button onclick>explore</button></a>
       <a href="mens.html"><button onclick>mens</button></a>
       <a href="womens.html"><button onclick>womens</button></a>
+      
 
-      <div class="search"><input type="text" placeholder="Search.."> </div>
+      <div class="search"><input type="text" placeholder="Search.." /></div>
+      <div class="cart"
+        <a href="cart.html">
+        <img
+          src="images/Icon-shopping-cart.png"
+          alt="Icon-shopping-cart"
+          width="10px"
+          height="10px"
+        />
+      </div>
     </header>
 
     <h1>RainyDays</h1>
@@ -38,7 +49,19 @@
       width="100%"
       ;
     />
+    <footer>
+      <div class="social-media-box mobile-index">
+        <a class="social-media-icon" href="https://www.facebook.com" ><img
+                src="/images/Icon awesome-facebook-f.png" alt="facebook"
 
-    
+              width= "10"
+              height= "10"/></a>
+
+        <a class="social-media-icon" href="https://www.instagram.com" target="_blank"><img
+                src="/images/Icon awesome-instagram.png" alt="instagram."></a>
+        <a class="social-media-icon" href="https://www.pinterest.com" target="_blank"><img
+                src="/images/Icon awesome-pinterest-p.png" alt="pinterest"></a>
+        <p class="footer-text">&copy 2020</p>  
+    </footer>
   </body>
 </html>
