--- a/explore1.html
+++ b/explore1.html
@@ -1,5 +1,10 @@
 <!DOCTYPE html>
 <html>
+    <head>
+        <link rel="stylesheet" href="styles/explore1.css" />
+        <title>Explore</title>
+        <meta name="viewporrt" content="width=device-width, initial-scale=1.0" />
+      </head>
 <div class="wrapper">
     <nav class="main-nav">
         <ul>
@@ -29,5 +34,15 @@
 </div>
 
 
-
+<footer>
+    <div class="social-media-box mobile-index">
+        <a class="social-media-icon" href="https://www.facebook.com" target="_blank"><img
+                src="/images/facebook.svg" alt="facebook"></a>
+        <a class="social-media-icon" href="https://www.instagram.com" target="_blank"><img
+                src="/images/instagram.svg" alt="instagram."></a>
+        <a class="social-media-icon" href="https://www.twitter.com" target="_blank"><img
+                src="/images/twitter.svg" alt="twitter"></a>
+        <p class="footer-text">&copy all rights reserved</p>        
+    </div>
+</footer>
 </html>
