cart symbol and link to
cart icon float: right was the trick

--- a/index.html
+++ b/index.html
@@ -27,16 +27,15 @@
       <a href="mens.html"><button onclick>mens</button></a>
       <a href="womens.html"><button onclick>womens</button></a>
       
-
-      <div class="search"><input type="text" placeholder="Search.." /></div>
-      <div class="cart"
+      <div class="cart">
         <a href="cart.html">
         <img
           src="images/Icon-shopping-cart.png"
           alt="Icon-shopping-cart"
-          width="10px"
-          height="10px"
-        />
+          width="80"
+          height="50"
+          />
+        
       </div>
     </header>
 
