cart css and index css
float icons and search bar
added search button th index

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <a href="explore.html"><button onclick>explore</button></a>
       <a href="mens.html"><button onclick>mens</button></a>
       <a href="womens.html"><button onclick>womens</button></a>
-      
+      <li><div class="search"><input type="text" placeholder="Search.."> <a href="explore.html"><button onclick>search</button></a></div></li>
       <div class="cart">
         <a href="cart.html">
         <img
