--- a/cart.html
+++ b/cart.html
@@ -43,19 +43,14 @@
     </nav>
     
   </body>
-  <footer>
-    <div class="social-media-icon">
-      <a class="social-media-icon" href="https://www.facebook.com" ><img
-              src="/images/Icon awesome-facebook-f.png" alt="facebook"
-
-            width= "10"
-            height= "10"/></a>
-
-      <a class="social-media-icon" href="https://www.instagram.com" ><img
-              src="/images/Icon awesome-instagram.png" alt="instagram."></a>
-      <a class="social-media-icon" href="https://www.pinterest.com" >
-        <img
-              src="/images/Icon awesome-pinterest-p.png" alt="pinterest"></a>
-      <p class="footer-text">&copy 2020</p>  
-  </footer>
+  <main><div class="product">
+    <img
+    src="images/pexels-matt-hardy-2755165-1.jpg"
+    height="150px"
+    width="120px"
+  /> </div>
+    <p class="jacketinfo">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quasi dicta amet repellendus, provident, quos, veniam nihil repudiandae unde dolorem suscipit quam quisquam molestias esse reiciendis ullam laudantium quo eum libero.
+    </p>
+    <p>$199</p>
+</main>
 </html>
