--- a/explore.html
+++ b/explore.html
@@ -39,6 +39,7 @@
       </nav>
       
     </body>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque, ad! Vero, quaerat ab! Nulla voluptas assumenda voluptatem rem, amet ratione, quasi consequatur nisi officia doloremque commodi sed ex debitis ipsam.</p>
     <img
       src="images/elias-arias--fMc5tAEPcs-unsplashMountains.jpg"
       height="100%"
