--- a/index.html
+++ b/index.html
@@ -42,10 +42,10 @@
   </main>
 
   <footer>
-      <ul class="social-media">
-        <li><a href="facebook.com"><img src="images/Icon awesome-facebook-f.png" alt="facebook" width="25" height="20"></a></li>
-        <li><a href="instagram.com"><img src="images/Icon awesome-instagram.png" alt="instagram" width="25" height="20"></a></li>
-        <li><a href="youtube.com"><img src="images/Icon awesome-youtube.png" alt="youtube" width="25" height="20"></a></li>
+      <ul class="socialmedia">
+        <li class="face"><a href="facebook.com"><img src="images/Icon awesome-facebook-f.png" alt="facebook" width="25" height="20"></a></li>
+        <li class="insta"><a href="instagram.com"><img src="images/Icon awesome-instagram.png" alt="instagram" width="25" height="20"></a></li>
+        <li class="tube"><a href="youtube.com"><img src="images/Icon awesome-youtube.png" alt="youtube" width="25" height="20"></a></li>
 
       </ul>
       <p class="footer-text">&copy 2020</p>
